--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "axios": "^1.4.0",
+    "daisyui": "^2.51.6",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
