--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "axios": "^1.4.0",
     "daisyui": "^2.51.6",
+    "json-server": "^0.17.3",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swiper": "^9.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
