--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swiper": "^9.3.2"
+    "swiper": "^9.3.2",
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
